// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Page> should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col max-w-screen-lg min-h-screen mx-auto p-3 theme-default"
  >
    <header
      class="mb-3 text-center sm:text-left"
    >
      <span
        class="page-title"
      >
        Librum
      </span>
      <br
        class="block sm:hidden"
      />
      <small
        class="page-subtitle m-0 sm:ml-2"
      >
        Campaign Companion
      </small>
      <hr
        class="hr-fancy my-1 block sm:hidden"
      />
      <nav
        class="page-navigation relative z-10"
      >
        <ul
          class="flex flex-col sm:flex-row"
        >
          <li
            class="navigation-item"
          >
            <p
              class="navigation-item-link-disabled text-muted"
            >
              Home
            </p>
          </li>
          <li
            class="navigation-item"
          >
            <a
              class="navigation-item-link"
              href="/publishers"
            >
              Publishers
            </a>
          </li>
          <li
            class="navigation-item"
          >
            <a
              class="navigation-item-link"
              href="/game_systems"
            >
              Game Systems
            </a>
          </li>
          <li
            class="dropdown-container"
          >
            <div
              class="dropdown"
            >
              <button
                class="dropdown-label"
              >
                Sources
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-caret-up fa-xs ml-2"
                  data-icon="caret-up"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.39 265.4l127.1-128C143.6 131.1 151.8 128 160 128s16.38 3.125 22.63 9.375l127.1 128c9.156 9.156 11.9 22.91 6.943 34.88S300.9 320 287.1 320H32.01c-12.94 0-24.62-7.781-29.58-19.75S.2333 274.5 9.39 265.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </li>
          <li
            class="dropdown-container"
          >
            <div
              class="dropdown"
            >
              <button
                class="dropdown-label"
              >
                Admin
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-caret-up fa-xs ml-2"
                  data-icon="caret-up"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.39 265.4l127.1-128C143.6 131.1 151.8 128 160 128s16.38 3.125 22.63 9.375l127.1 128c9.156 9.156 11.9 22.91 6.943 34.88S300.9 320 287.1 320H32.01c-12.94 0-24.62-7.781-29.58-19.75S.2333 274.5 9.39 265.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </li>
        </ul>
      </nav>
      <hr
        class="hr-fancy my-1"
      />
    </header>
    <main
      class="grow"
    >
      Page Content Here...
    </main>
    <footer
      class="mt-3 shrink-0 text-center sm:text-left"
    >
      <hr
        class="hr-fancy mb-2"
      />
      <span
        class="text-muted"
      >
        What lies beyond the furthest reaches of the sky?
      </span>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`<Page> when the session is authenticated should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col max-w-screen-lg min-h-screen mx-auto p-3 theme-default"
  >
    <header
      class="mb-3 text-center sm:text-left"
    >
      <span
        class="page-title"
      >
        Librum
      </span>
      <br
        class="block sm:hidden"
      />
      <small
        class="page-subtitle m-0 sm:ml-2"
      >
        Campaign Companion
      </small>
      <hr
        class="hr-fancy my-1 block sm:hidden"
      />
      <nav
        class="page-navigation relative z-10"
      >
        <ul
          class="flex flex-col sm:flex-row"
        >
          <li
            class="navigation-item"
          >
            <p
              class="navigation-item-link-disabled text-muted"
            >
              Home
            </p>
          </li>
          <li
            class="navigation-item"
          >
            <a
              class="navigation-item-link"
              href="/publishers"
            >
              Publishers
            </a>
          </li>
          <li
            class="navigation-item"
          >
            <a
              class="navigation-item-link"
              href="/game_systems"
            >
              Game Systems
            </a>
          </li>
          <li
            class="dropdown-container"
          >
            <div
              class="dropdown"
            >
              <button
                class="dropdown-label"
              >
                Sources
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-caret-up fa-xs ml-2"
                  data-icon="caret-up"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.39 265.4l127.1-128C143.6 131.1 151.8 128 160 128s16.38 3.125 22.63 9.375l127.1 128c9.156 9.156 11.9 22.91 6.943 34.88S300.9 320 287.1 320H32.01c-12.94 0-24.62-7.781-29.58-19.75S.2333 274.5 9.39 265.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </li>
          <li
            class="dropdown-container"
          >
            <div
              class="dropdown"
            >
              <button
                class="dropdown-label"
              >
                Admin
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-caret-up fa-xs ml-2"
                  data-icon="caret-up"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.39 265.4l127.1-128C143.6 131.1 151.8 128 160 128s16.38 3.125 22.63 9.375l127.1 128c9.156 9.156 11.9 22.91 6.943 34.88S300.9 320 287.1 320H32.01c-12.94 0-24.62-7.781-29.58-19.75S.2333 274.5 9.39 265.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </li>
        </ul>
      </nav>
      <hr
        class="hr-fancy my-1"
      />
      <div
        class="text-left mt-2"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-user mr-1"
          data-icon="user"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224 256c70.7 0 128-57.31 128-128s-57.3-128-128-128C153.3 0 96 57.31 96 128S153.3 256 224 256zM274.7 304H173.3C77.61 304 0 381.6 0 477.3c0 19.14 15.52 34.67 34.66 34.67h378.7C432.5 512 448 496.5 448 477.3C448 381.6 370.4 304 274.7 304z"
            fill="currentColor"
          />
        </svg>
        <span
          class="hidden sm:inline"
        >
          You are currently logged in as 
        </span>
        Alan Bradley
        <span
          class="float-right link-danger"
        >
          <button>
            Log Out
          </button>
        </span>
      </div>
    </header>
    <main
      class="grow"
    >
      Page Content Here...
    </main>
    <footer
      class="mt-3 shrink-0 text-center sm:text-left"
    >
      <hr
        class="hr-fancy mb-2"
      />
      <span
        class="text-muted"
      >
        What lies beyond the furthest reaches of the sky?
      </span>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`<Page> when there are many alerts should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col max-w-screen-lg min-h-screen mx-auto p-3 theme-default"
  >
    <header
      class="mb-3 text-center sm:text-left"
    >
      <span
        class="page-title"
      >
        Librum
      </span>
      <br
        class="block sm:hidden"
      />
      <small
        class="page-subtitle m-0 sm:ml-2"
      >
        Campaign Companion
      </small>
      <hr
        class="hr-fancy my-1 block sm:hidden"
      />
      <nav
        class="page-navigation relative z-10"
      >
        <ul
          class="flex flex-col sm:flex-row"
        >
          <li
            class="navigation-item"
          >
            <p
              class="navigation-item-link-disabled text-muted"
            >
              Home
            </p>
          </li>
          <li
            class="navigation-item"
          >
            <a
              class="navigation-item-link"
              href="/publishers"
            >
              Publishers
            </a>
          </li>
          <li
            class="navigation-item"
          >
            <a
              class="navigation-item-link"
              href="/game_systems"
            >
              Game Systems
            </a>
          </li>
          <li
            class="dropdown-container"
          >
            <div
              class="dropdown"
            >
              <button
                class="dropdown-label"
              >
                Sources
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-caret-up fa-xs ml-2"
                  data-icon="caret-up"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.39 265.4l127.1-128C143.6 131.1 151.8 128 160 128s16.38 3.125 22.63 9.375l127.1 128c9.156 9.156 11.9 22.91 6.943 34.88S300.9 320 287.1 320H32.01c-12.94 0-24.62-7.781-29.58-19.75S.2333 274.5 9.39 265.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </li>
          <li
            class="dropdown-container"
          >
            <div
              class="dropdown"
            >
              <button
                class="dropdown-label"
              >
                Admin
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-caret-up fa-xs ml-2"
                  data-icon="caret-up"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.39 265.4l127.1-128C143.6 131.1 151.8 128 160 128s16.38 3.125 22.63 9.375l127.1 128c9.156 9.156 11.9 22.91 6.943 34.88S300.9 320 287.1 320H32.01c-12.94 0-24.62-7.781-29.58-19.75S.2333 274.5 9.39 265.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </li>
        </ul>
      </nav>
      <hr
        class="hr-fancy my-1"
      />
    </header>
    <main
      class="grow"
    >
      <ul
        class="alerts pb-3"
      >
        <li>
          <div
            class="alert alert-success"
          >
            <button
              class="float-right link-plain"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-x "
                data-icon="x"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 384 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M376.6 427.5c11.31 13.58 9.484 33.75-4.094 45.06c-5.984 4.984-13.25 7.422-20.47 7.422c-9.172 0-18.27-3.922-24.59-11.52L192 305.1l-135.4 162.5c-6.328 7.594-15.42 11.52-24.59 11.52c-7.219 0-14.48-2.438-20.47-7.422c-13.58-11.31-15.41-31.48-4.094-45.06l142.9-171.5L7.422 84.5C-3.891 70.92-2.063 50.75 11.52 39.44c13.56-11.34 33.73-9.516 45.06 4.094L192 206l135.4-162.5c11.3-13.58 31.48-15.42 45.06-4.094c13.58 11.31 15.41 31.48 4.094 45.06l-142.9 171.5L376.6 427.5z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-check pr-2"
              data-icon="circle-check"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
                fill="currentColor"
              />
            </svg>
            Successfully activated reactor
          </div>
        </li>
        <li>
          <div
            class="alert alert-warning"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-radiation pr-2"
              data-icon="radiation"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 303.1c26.5 0 48-21.5 48-48S282.5 207.1 256 207.1S208 229.5 208 255.1S229.5 303.1 256 303.1zM213.6 188L142.7 74.71C132.5 58.41 109.9 54.31 95.25 66.75c-44.94 38.1-76.19 91.82-85.17 152.8C7.266 238.7 22.67 255.8 42.01 255.8h133.8C175.8 227.2 191 202.3 213.6 188zM416.8 66.75c-14.67-12.44-37.21-8.338-47.41 7.965L298.4 188c22.6 14.3 37.8 39.2 37.8 67.8h133.8c19.34 0 34.74-17.13 31.93-36.26C492.9 158.6 461.7 104.8 416.8 66.75zM298.4 323.5C286.1 331.2 271.6 335.9 256 335.9s-30.1-4.701-42.4-12.4L142.7 436.9c-10.14 16.21-4.16 38.2 13.32 45.95C186.6 496.4 220.4 504 256 504s69.42-7.611 100-21.18c17.48-7.752 23.46-29.74 13.32-45.95L298.4 323.5z"
                fill="currentColor"
              />
            </svg>
            Reactor overheat imminent
          </div>
        </li>
        <li>
          <div
            class="alert alert-failure"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-bomb pr-2"
              data-icon="bomb"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M440.8 4.994C441.9 1.99 444.8 0 448 0C451.2 0 454.1 1.99 455.2 4.994L469.3 42.67L507 56.79C510 57.92 512 60.79 512 64C512 67.21 510 70.08 507 71.21L469.3 85.33L455.2 123C454.1 126 451.2 128 448 128C444.8 128 441.9 126 440.8 123L426.7 85.33L388.1 71.21C385.1 70.08 384 67.21 384 64C384 60.79 385.1 57.92 388.1 56.79L426.7 42.67L440.8 4.994zM289.4 97.37C301.9 84.88 322.1 84.88 334.6 97.37L363.3 126.1L380.7 108.7C386.9 102.4 397.1 102.4 403.3 108.7C409.6 114.9 409.6 125.1 403.3 131.3L385.9 148.7L414.6 177.4C427.1 189.9 427.1 210.1 414.6 222.6L403.8 233.5C411.7 255.5 416 279.3 416 304C416 418.9 322.9 512 208 512C93.12 512 0 418.9 0 304C0 189.1 93.12 96 208 96C232.7 96 256.5 100.3 278.5 108.3L289.4 97.37zM95.1 296C95.1 238.6 142.6 192 199.1 192H207.1C216.8 192 223.1 184.8 223.1 176C223.1 167.2 216.8 160 207.1 160H199.1C124.9 160 63.1 220.9 63.1 296V304C63.1 312.8 71.16 320 79.1 320C88.84 320 95.1 312.8 95.1 304V296z"
                fill="currentColor"
              />
            </svg>
            Increase in three-eyed fish observed
          </div>
        </li>
      </ul>
      Page Content Here...
    </main>
    <footer
      class="mt-3 shrink-0 text-center sm:text-left"
    >
      <hr
        class="hr-fancy mb-2"
      />
      <span
        class="text-muted"
      >
        What lies beyond the furthest reaches of the sky?
      </span>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`<Page> with breadcrumbs: value should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col max-w-screen-lg min-h-screen mx-auto p-3 theme-default"
  >
    <header
      class="mb-3 text-center sm:text-left"
    >
      <span
        class="page-title"
      >
        Librum
      </span>
      <br
        class="block sm:hidden"
      />
      <small
        class="page-subtitle m-0 sm:ml-2"
      >
        Campaign Companion
      </small>
      <hr
        class="hr-fancy my-1 block sm:hidden"
      />
      <nav
        class="page-navigation relative z-10"
      >
        <ul
          class="flex flex-col sm:flex-row"
        >
          <li
            class="navigation-item"
          >
            <p
              class="navigation-item-link-disabled text-muted"
            >
              Home
            </p>
          </li>
          <li
            class="navigation-item"
          >
            <a
              class="navigation-item-link"
              href="/publishers"
            >
              Publishers
            </a>
          </li>
          <li
            class="navigation-item"
          >
            <a
              class="navigation-item-link"
              href="/game_systems"
            >
              Game Systems
            </a>
          </li>
          <li
            class="dropdown-container"
          >
            <div
              class="dropdown"
            >
              <button
                class="dropdown-label"
              >
                Sources
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-caret-up fa-xs ml-2"
                  data-icon="caret-up"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.39 265.4l127.1-128C143.6 131.1 151.8 128 160 128s16.38 3.125 22.63 9.375l127.1 128c9.156 9.156 11.9 22.91 6.943 34.88S300.9 320 287.1 320H32.01c-12.94 0-24.62-7.781-29.58-19.75S.2333 274.5 9.39 265.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </li>
          <li
            class="dropdown-container"
          >
            <div
              class="dropdown"
            >
              <button
                class="dropdown-label"
              >
                Admin
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-caret-up fa-xs ml-2"
                  data-icon="caret-up"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.39 265.4l127.1-128C143.6 131.1 151.8 128 160 128s16.38 3.125 22.63 9.375l127.1 128c9.156 9.156 11.9 22.91 6.943 34.88S300.9 320 287.1 320H32.01c-12.94 0-24.62-7.781-29.58-19.75S.2333 274.5 9.39 265.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </li>
        </ul>
      </nav>
      <hr
        class="hr-fancy my-1"
      />
    </header>
    <main
      class="grow"
    >
      Page Content Here...
    </main>
    <footer
      class="mt-3 shrink-0 text-center sm:text-left"
    >
      <ul
        class="flex flex-col sm:flex-row page-breadcrumbs"
      >
        <li
          class="page-breadcrumb"
        >
          <span
            class="page-breadcrumb-empty"
          >
            Breadcrumb One
          </span>
        </li>
        <li
          class="page-breadcrumb"
        >
          <span
            class="page-breadcrumb-empty"
          >
            Breadcrumb Two
          </span>
        </li>
        <li
          class="page-breadcrumb"
        >
          <a
            class="page-breadcrumb-link"
            href="/example"
          >
            Breadcrumb Three
          </a>
        </li>
      </ul>
      <hr
        class="hr-fancy mb-2"
      />
      <span
        class="text-muted"
      >
        What lies beyond the furthest reaches of the sky?
      </span>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`<Page> with navigation: value should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col max-w-screen-lg min-h-screen mx-auto p-3 theme-default"
  >
    <header
      class="mb-3 text-center sm:text-left"
    >
      <span
        class="page-title"
      >
        Librum
      </span>
      <br
        class="block sm:hidden"
      />
      <small
        class="page-subtitle m-0 sm:ml-2"
      >
        Campaign Companion
      </small>
      <hr
        class="hr-fancy my-1 block sm:hidden"
      />
      <nav
        class="page-navigation relative z-10"
      >
        <ul
          class="flex flex-col sm:flex-row"
        >
          <li
            class="navigation-item"
          >
            <p
              class="navigation-item-link-disabled text-muted"
            >
              Home
            </p>
          </li>
          <li
            class="navigation-item"
          >
            <a
              class="navigation-item-link"
              href="/launch-sites"
            >
              Launch Sites
            </a>
          </li>
          <li
            class="dropdown-container"
          >
            <div
              class="dropdown"
            >
              <button
                class="dropdown-label"
              >
                Rockets
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-caret-up fa-xs ml-2"
                  data-icon="caret-up"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.39 265.4l127.1-128C143.6 131.1 151.8 128 160 128s16.38 3.125 22.63 9.375l127.1 128c9.156 9.156 11.9 22.91 6.943 34.88S300.9 320 287.1 320H32.01c-12.94 0-24.62-7.781-29.58-19.75S.2333 274.5 9.39 265.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </li>
          <li
            class="dropdown-container"
          >
            <div
              class="dropdown"
            >
              <button
                class="dropdown-label"
              >
                Administration
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-caret-up fa-xs ml-2"
                  data-icon="caret-up"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.39 265.4l127.1-128C143.6 131.1 151.8 128 160 128s16.38 3.125 22.63 9.375l127.1 128c9.156 9.156 11.9 22.91 6.943 34.88S300.9 320 287.1 320H32.01c-12.94 0-24.62-7.781-29.58-19.75S.2333 274.5 9.39 265.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </li>
        </ul>
      </nav>
      <hr
        class="hr-fancy my-1"
      />
    </header>
    <main
      class="grow"
    >
      Page Content Here...
    </main>
    <footer
      class="mt-3 shrink-0 text-center sm:text-left"
    >
      <hr
        class="hr-fancy mb-2"
      />
      <span
        class="text-muted"
      >
        What lies beyond the furthest reaches of the sky?
      </span>
    </footer>
  </div>
</DocumentFragment>
`;
